--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                       
 
                         <input type="file"  id="image" name="image"><br>
-                        <label for="file">Profile Image</label><br>
+                        <label for="file"></label><br>
                         
             <!----------------------->
                       </div>
